# WasmGPU

./: .gitignore  CMakeLists.txt  README.md  bench.md  build.py  package.json
benchmarks/: README.md  bench_node_onnx_cpu.mjs  bench_torch_resnet50.py  collect_bench.py  common.py  export_resnet50_onnx.py  onnx_webgpu_bench.html  onnx_webgpu_bench.js
build_scripts/: embed_network_data.py  embed_shaders.py
cmake/: embedded_data.h.cmakein  embedded_shaders.h.cmakein
include/: cpp_executor.h  cpu_conv_kernels.h  cpu_graph_executor.h  cpu_simd_math.h  dummy_engine.h  gpu_engine.h  gpu_executor.h  image_proc.h  model_loader.h  network_weights.h  parallel_tools.h  wasm_gpu_engine.h  webgpu_graph_executor.h  wgsl_generator.h
include/thread_tools/: parallel_tools.h  parallel_utils.h  thread_pool.hpp  wasm_worker_pool.h
network_data/: tiny_lenet_manifest.json  tiny_lenet_weights.npz  tiny_residual_manifest.json
network_data/lenet/: tiny_lenet_manifest.json
network_trainer/: README.md  embed_network_data.py  export_resnet50.py  train_mnist.py
samples/: app.js  sample.html  serve.json  worker.js
samples/CppWebGpu/: app.js  sample.html  webgpu_lenet.js  worker.js
samples/CppWebGpuAsync/: app.js  sample.html  worker.js
samples/Dummy/: app.js  sample.html  worker.js
samples/JsWebGpu/: app.js  sample.html
samples/ResNet50/: app.js  sample.html  worker.js
shaders/: conv_relu.wgsl  large_conv_relu.wgsl  large_linear_partial.wgsl  large_linear_reduce.wgsl  linear.wgsl
src/: bindings.cpp  cpp_executor.cpp  cpu_conv_kernels.cpp  cpu_graph_executor.cpp  dawn_gpu_executor.cpp  dummy_engine.cpp  gpu_engine.cpp  gpu_executor.cpp  model_loader.cpp  network_weights.cpp  parallel_tools.cpp  wasm_gpu_engine.cpp  webgpu_graph_executor.cpp  wgsl_generator.cpp
src/thread_tools/: parallel_tools.cpp  parallel_utils.cpp  thread_pool.cpp  wasm_worker_pool.cpp
